src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Active_Created_By__c</fullName>
        <formula>IF(CreatedBy.IsActive=TRUE,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <label>Active (Created By)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Activity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_type_workflow__c</fullName>
        <description>Activity type is not available in custom reports, so this is a workaround</description>
        <label>Activity type (workflow)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Active__c</fullName>
        <formula>IF(Owner:User.IsActive=TRUE,&quot;True&quot;,&quot;False&quot;)</formula>
        <label>Assigned: Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Created_By__c</fullName>
        <formula>Owner:User.Full_Name__c&amp;&quot; (&quot;&amp;CreatedBy.Full_Name__c&amp;&quot;)&quot;</formula>
        <label>Assigned (Created By)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Role_Buckets__c</fullName>
        <formula>IF(CONTAINS(Owner:User.UserRole.Name,&quot;Business Development Rep&quot;),&quot;BDR&quot;,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Account Executive&quot;),&quot;AE&quot;,
&quot;Other&quot;))</formula>
        <label>Assigned Role Buckets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to SE</description>
        <label>Assigned SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Team2__c</fullName>
        <formula>Owner:User.Full_Name__c&amp;&quot; (&quot;&amp;TEXT(Owner:User.Team__c)&amp;&quot;)&quot;</formula>
        <label>Assigned (Team)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <formula>TEXT(Owner:User.Team__c)</formula>
        <label>Assigned Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>Owner:User.Full_Name__c</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Username__c</fullName>
        <formula>Owner:User.Username</formula>
        <label>Assigned Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU_Sockets__c</fullName>
        <label>CPU Sockets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <label>VMT Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Left Live Message</fullName>
                </value>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                    <default>true</default>
                    <label>No Answer</label>
                </value>
                <value>
                    <fullName>Set Callback</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Duration_Hours__c</fullName>
        <formula>CallDurationInSeconds/3600</formula>
        <label>Call Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connects_num__c</fullName>
        <formula>IF(AND(
Activity_type_workflow__c=&quot;Call&quot;,
OR(TEXT(Call_Disposition__c)=&quot;Connect&quot;,TEXT(Call_Disposition__c)=&quot;Conversation&quot;)),
1,0)</formula>
        <label>Connects #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversations_num__c</fullName>
        <formula>IF(AND(Activity_type_workflow__c=&quot;Call&quot;,TEXT(Call_Disposition__c)=&quot;Conversation&quot;),1,0)</formula>
        <label>Conversations #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cores__c</fullName>
        <inlineHelpText>Number of CPU cores in customer infrastructure</inlineHelpText>
        <label>Cores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Current_User__c</fullName>
        <formula>IF(CreatedById=$User.Id,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <label>Created By Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Team2__c</fullName>
        <formula>CreatedBy.FirstName&amp;&quot; &quot;&amp;CreatedBy.LastName&amp;&quot; (&quot;&amp;TEXT(CreatedBy.Team__c)&amp;&quot;)&quot;</formula>
        <label>Created By (Team)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Team__c</fullName>
        <formula>TEXT(CreatedBy.Team__c)</formula>
        <label>Created By Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Tenure_at_Creation_BDR__c</fullName>
        <formula>DATEVALUE(CreatedDate)-CreatedBy.Start_Date__c</formula>
        <label>Created By Tenure at Creation (BDR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Tenure_at_Creation_SR__c</fullName>
        <formula>DATEVALUE(CreatedDate)-CreatedBy.Promotion_to_AE_Date__c</formula>
        <label>Created By Tenure at Creation (SR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Username__c</fullName>
        <formula>CreatedBy.Username</formula>
        <label>Created By Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_Owner__c</fullName>
        <formula>IF(CreatedBy.Id=Owner:User.Id,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Created by Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demos__c</fullName>
        <formula>IF(Activity_type_workflow__c=&quot;Demo&quot;,1,0)</formula>
        <label>Demos #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials__c</fullName>
        <formula>IF(OR(Activity_type_workflow__c=&quot;Connect&quot;,Activity_type_workflow__c=&quot;Call&quot;,FIND(&quot;onversation&quot;,Activity_type_workflow__c)&gt;0),1,0)</formula>
        <label>Dials #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Activity__c</fullName>
        <formula>OR(AND(Activity_type_workflow__c=&quot;Call&quot;,OR(ISPICKVAL(Call_Disposition__c,&quot;Connect&quot;), ISPICKVAL(Call_Disposition__c,&quot;Conversation&quot;))),
Activity_type_workflow__c=&quot;Inbound Call&quot;,
Activity_type_workflow__c=&quot;Email (Inbound)&quot;,
Activity_type_workflow__c=&quot;Demo&quot;,
Activity_type_workflow__c=&quot;First Meeting&quot;,
Activity_type_workflow__c=&quot;Customer Success&quot;,
Activity_type_workflow__c=&quot;Evaluation Meeting&quot;,
Activity_type_workflow__c=&quot;Business Impact Presentation&quot;,
Activity_type_workflow__c=&quot;Discovery Call&quot;,
Activity_type_workflow__c=&quot;Key Globals Exec Meeting&quot;,
Activity_type_workflow__c=&quot;Product Walkthrough&quot;,
Activity_type_workflow__c=&quot;Business Case Review&quot;,
Activity_type_workflow__c=&quot;Technical Session&quot;,
Activity_type_workflow__c=&quot;Other Call/Meeting&quot;,
Activity_type_workflow__c=&quot;On-Site Meeting&quot;,
Activity_type_workflow__c=&quot;First Meeting&quot;,
Activity_type_workflow__c=&quot;POV Scoping&quot;,
Activity_type_workflow__c=&quot;Procurement Meeting&quot;,
Activity_type_workflow__c=&quot;Webinar&quot;,
Activity_type_workflow__c=&quot;Webinar Demo&quot;,
AND(LEFT(Subject,12)=&quot;Opened Email&quot;,Assigned_To__c=&quot;Marketo&quot;),
AND(LEFT(Subject,13)=&quot;Clicked Email&quot;,Assigned_To__c=&quot;Marketo&quot;))</formula>
        <label>Engagement Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <description>Indicates which  Engineer will lead the demo, install, etc.</description>
        <inlineHelpText>Indicates which  Engineer will lead the demo, install, etc</inlineHelpText>
        <label>Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Markey</fullName>
                </value>
                <value>
                    <fullName>Alec Kemp</fullName>
                </value>
                <value>
                    <fullName>Alex Marsh</fullName>
                </value>
                <value>
                    <fullName>Allen Patterson</fullName>
                </value>
                <value>
                    <fullName>Anson McCook</fullName>
                </value>
                <value>
                    <fullName>Aseem Anwar</fullName>
                </value>
                <value>
                    <fullName>Barry Howard</fullName>
                </value>
                <value>
                    <fullName>Brad Blodgett</fullName>
                </value>
                <value>
                    <fullName>Charles Russell</fullName>
                </value>
                <value>
                    <fullName>Chris Rauch</fullName>
                </value>
                <value>
                    <fullName>Chris Williamson</fullName>
                </value>
                <value>
                    <fullName>Daniel Butzer</fullName>
                </value>
                <value>
                    <fullName>Derrick Faur</fullName>
                </value>
                <value>
                    <fullName>DeVaughn Riley</fullName>
                </value>
                <value>
                    <fullName>Don McKeith</fullName>
                </value>
                <value>
                    <fullName>Eric Horsman</fullName>
                </value>
                <value>
                    <fullName>Francois Guillaume</fullName>
                </value>
                <value>
                    <fullName>Griffin Bossard</fullName>
                </value>
                <value>
                    <fullName>Hillel Adler</fullName>
                </value>
                <value>
                    <fullName>Howard Masters</fullName>
                </value>
                <value>
                    <fullName>Iddo Avneri</fullName>
                </value>
                <value>
                    <fullName>Jacob Ben-David</fullName>
                </value>
                <value>
                    <fullName>James Dyckowski</fullName>
                </value>
                <value>
                    <fullName>Jamie Hodge</fullName>
                </value>
                <value>
                    <fullName>Jason Beaudette</fullName>
                </value>
                <value>
                    <fullName>Jason Howard</fullName>
                </value>
                <value>
                    <fullName>Jason Huff</fullName>
                </value>
                <value>
                    <fullName>Jeremy Levenson</fullName>
                </value>
                <value>
                    <fullName>Jerome Papazian</fullName>
                </value>
                <value>
                    <fullName>Jimmy Herbert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMT Executive Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Demo_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked by a Task Trigger method if this activity is the first schedule Demo in a particular opportunity.</description>
        <label>First Demo Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked by a Task Trigger method if this activity is the first completed Demo in a particular opportunity.</description>
        <label>First Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked by a Task Trigger method if this activity is the first scheduled &quot;meeting&quot; (demo, on-site, other meeting) in a particular opportunity.</description>
        <label>First Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Similar to the first demo checkbox. This field is checked by a Task Trigger method if this activity is the first completed&quot;meeting&quot; (demo, on-site, other meeting) in a particular opportunity.</description>
        <label>First Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor__c</fullName>
        <label>Hardware Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>SimpliVity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosts_VMs__c</fullName>
        <formula>IF(ISBLANK(Hosts__c),&quot;N/A&quot;,
IF(LEN(TEXT(Hosts__c))&gt;=7,
LEFT(TEXT(Hosts__c),LEN(TEXT(Hosts__c))-6)&amp;&quot;,&quot;&amp;LEFT(RIGHT(TEXT(Hosts__c),6),3)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Hosts__c),3),
IF(LEN(TEXT(Hosts__c))&gt;=4,
LEFT(TEXT(Hosts__c),LEN(TEXT(Hosts__c))-3)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Hosts__c),3),TEXT(Hosts__c))))
&amp;&quot; (&quot;&amp;
IF(ISBLANK(Virtual_Machines_VMs__c),&quot;N/A)&quot;,
IF(LEN(TEXT(Virtual_Machines_VMs__c))&gt;=7,
LEFT(TEXT(Virtual_Machines_VMs__c),LEN(TEXT(Virtual_Machines_VMs__c))-6)&amp;&quot;,&quot;&amp;LEFT(RIGHT(TEXT(Virtual_Machines_VMs__c),6),3)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Virtual_Machines_VMs__c),3)&amp;&quot;)&quot;,
IF(LEN(TEXT(Virtual_Machines_VMs__c))&gt;=4,
LEFT(TEXT(Virtual_Machines_VMs__c),LEN(TEXT(Virtual_Machines_VMs__c))-3)&amp;&quot;,&quot;&amp;RIGHT(TEXT(Virtual_Machines_VMs__c),3)&amp;&quot;)&quot;,TEXT(Virtual_Machines_VMs__c)&amp;&quot;)&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hosts (VMs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosts__c</fullName>
        <label>Hosts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hypervisor_Vendor__c</fullName>
        <label>Hypervisor Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Hyper-V (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Xen (Open Source)</fullName>
                </value>
                <value>
                    <fullName>Xen (Citrix)</fullName>
                </value>
                <value>
                    <fullName>KVM (Openstack)</fullName>
                </value>
                <value>
                    <fullName>KVM (Redhat)</fullName>
                </value>
                <value>
                    <fullName>OracleVM</fullName>
                </value>
                <value>
                    <fullName>Heterogeneous</fullName>
                </value>
                <value>
                    <fullName>IBM PowerVM</fullName>
                </value>
                <value>
                    <fullName>Acropolis</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installed_During_Demo_Yes_No__c</fullName>
        <label>Installed / Conducted on Client Infrstr.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_Date_TIme__c</fullName>
        <description>Gives a local Date Time depending on the Lead/Contact&apos;s Address/Phone information</description>
        <label>Local Date/TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Influence__c</fullName>
        <label>Marketing Campaign Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hardware Refresh</fullName>
                    <label>Efficiency Campaign</label>
                </value>
                <value>
                    <fullName>Journey to the Cloud</fullName>
                </value>
                <value>
                    <fullName>CIO Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Survey</fullName>
                </value>
                <value>
                    <fullName>Cloud Readiness Survey</fullName>
                </value>
                <value>
                    <fullName>Field Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer Referral Program</fullName>
                </value>
                <value>
                    <fullName>IT Maturity Survey</fullName>
                </value>
                <value>
                    <fullName>MLB All-Star Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>IT Compliance Survey</fullName>
                </value>
                <value>
                    <fullName>Cloud Barrier Survey</fullName>
                </value>
                <value>
                    <fullName>Ignite Raffle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketo_Subject__c</fullName>
        <description>Summarizes the subject from marketo tasks. E.g., groups all whitepaper form fills into &quot;WP&quot;.</description>
        <formula>IF( Marketo_Task_Type__c = &quot;Form Fill&quot;, 
IF( OR( CONTAINS( Subject, &quot;wp-&quot; ), CONTAINS( Subject, &quot;-WP&quot; ), CONTAINS( Subject, &quot;-wp&quot; )), &quot;WP&quot;, 
IF( CONTAINS( Subject, &quot;New-Customer-Jumpstart&quot;), &quot;Training&quot;,
IF( CONTAINS( Subject, &quot;UnsubscribePage&quot;), &quot;Unsubscribe&quot;, 
IF( OR( CONTAINS( Subject, &quot;new-cloud-edition-license&quot; ), CONTAINS( Subject, &quot;virtual-health-monitor-license&quot; )), &quot;License&quot;, 
IF( OR(CONTAINS( Subject, &quot;VHMAppliancedownloadtestconvertedpage&quot;), CONTAINS( Subject, &quot;New_VHMLandingPage&quot;)), &quot;VHM&quot;, 
IF( OR(CONTAINS( Subject, &quot;CloudApplianceDownloadTestpage&quot;), CONTAINS( Subject, &quot;New_OperationsManager45&quot;)), &quot;Full Product&quot;, &quot;Other&quot;)))))), &quot;&quot;)</formula>
        <inlineHelpText>Summarizes the subject from marketo tasks. E.g., groups all whitepaper form fills into &quot;WP&quot;.</inlineHelpText>
        <label>Marketo Task Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Task_Type__c</fullName>
        <description>Summarizes the Subject of the task for all Marketo tasks.</description>
        <formula>if( Activity_type_workflow__c = &quot;Marketo&quot;, 

case( left(Subject, 6), 
&quot;Was Se&quot;, &quot;Email Send&quot;,
&quot;Opened&quot;, &quot;Email Open&quot;,
&quot;Clicke&quot;, &quot;Email Click&quot;,
&quot;Filled&quot;, &quot;Form Fill&quot;,
&quot;Other&quot;), 

&quot;&quot;)</formula>
        <inlineHelpText>Summarizes the Subject of the task for all Marketo tasks.</inlineHelpText>
        <label>Marketo Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps2__c</fullName>
        <label>Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualify account</fullName>
                </value>
                <value>
                    <fullName>Schedule demo and agree upon agenda</fullName>
                </value>
                <value>
                    <fullName>Confirm person of influence can state our value prop</fullName>
                </value>
                <value>
                    <fullName>Review business and/or technical decision criteria</fullName>
                </value>
                <value>
                    <fullName>Demo VMTurbo to show how it fits prospect&apos;s use cases</fullName>
                </value>
                <value>
                    <fullName>Prove VMTurbo meets technical criteria via Install Review</fullName>
                </value>
                <value>
                    <fullName>Outline decision-making process</fullName>
                </value>
                <value>
                    <fullName>Get update on status of competition</fullName>
                </value>
                <value>
                    <fullName>Align prospect&apos;s purchase timeline with our sales process</fullName>
                </value>
                <value>
                    <fullName>Gain commitment that technical case is won</fullName>
                </value>
                <value>
                    <fullName>Gain commitment to move to procurement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps_details__c</fullName>
        <inlineHelpText>What are our next steps? (Commit the customer to a date for the immediate next step)</inlineHelpText>
        <label>Next Steps Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_for_Meeting__c</fullName>
        <inlineHelpText>Any additional notes</inlineHelpText>
        <label>Notes for Meeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Details__c</fullName>
        <description>Short summary of account status and goals for this activity.</description>
        <inlineHelpText>What are the specific business and/or technical goals of this activity?</inlineHelpText>
        <label>Objective Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objectives2__c</fullName>
        <label>Objectives</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualify account</fullName>
                </value>
                <value>
                    <fullName>Schedule demo and agree upon agenda</fullName>
                </value>
                <value>
                    <fullName>Confirm person of influence can state our value prop</fullName>
                </value>
                <value>
                    <fullName>Review business and/or technical decision criteria</fullName>
                </value>
                <value>
                    <fullName>Demo VMTurbo to show how it fits prospect&apos;s use cases</fullName>
                </value>
                <value>
                    <fullName>Prove VMTurbo meets technical criteria via Install Review</fullName>
                </value>
                <value>
                    <fullName>Outline decision-making process</fullName>
                </value>
                <value>
                    <fullName>Get update on status of competition</fullName>
                </value>
                <value>
                    <fullName>Align prospect&apos;s purchase timeline with our sales process</fullName>
                </value>
                <value>
                    <fullName>Gain commitment that technical case is won</fullName>
                </value>
                <value>
                    <fullName>Gain commitment to move to procurement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Site_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Meeting/Task happened on-site at a customer location.</inlineHelpText>
        <label>On-Site Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_activity__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (activity)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcomes__c</fullName>
        <inlineHelpText>What are Outcomes of this activity? How did we do relative to the specific business and/or technical Objectives that we outlined for this activity?</inlineHelpText>
        <label>Comments Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Team_Present__c</fullName>
        <label>Partner Team Present</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portal Administration</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical/Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Demo_Notes__c</fullName>
        <label>Pre Demo Notes</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Preferred_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities Mentioned</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Assigned__c</fullName>
        <formula>IF(CONTAINS(Owner:User.UserRole.Name,&quot;Business Development Rep&quot;),&quot;BDR-&quot;&amp;Owner:User.Full_Name__c,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Account Executive&quot;),&quot;AE-&quot;&amp;Owner:User.Full_Name__c,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Bus Driver&quot;),&quot;BD-&quot;&amp;Owner:User.Full_Name__c,
IF(CONTAINS(Owner:User.UserRole.Name,&quot;Enterprise Rep&quot;),&quot;Ent-&quot;&amp;Owner:User.Full_Name__c,
Owner:User.Full_Name__c))))</formula>
        <label>Role-Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Created_By_Static__c</fullName>
        <label>Role (Created By - Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Created_By__c</fullName>
        <formula>IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Business Development Rep&quot;),&quot;BDR-&quot;&amp;CreatedBy.Full_Name__c,
IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Sales Development Rep&quot;),&quot;SDR-&quot;&amp;CreatedBy.Full_Name__c,
IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Account Executive&quot;),&quot;AE-&quot;&amp;CreatedBy.Full_Name__c, 
IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Bus Driver&quot;),&quot;BD-&quot;&amp;CreatedBy.Full_Name__c, 
IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Enterprise Rep&quot;),&quot;Ent-&quot;&amp;CreatedBy.Full_Name__c, 
CreatedBy.Full_Name__c)))))</formula>
        <label>Role-Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Assigned__c</fullName>
        <formula>Account.SE_Assigned1__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Next_Steps_Comments__c</fullName>
        <description>A field for SE&apos;s to place notes for the next steps and any other comments neccessary</description>
        <label>SE Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SL_Cadence_ID__c</fullName>
        <description>Alphanumeric identifier assigned to a Cadence.</description>
        <externalId>true</externalId>
        <label>Cadence ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Cadence_Name__c</fullName>
        <description>Name of Salesloft Cadence</description>
        <label>Cadence Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Clicked_Count__c</fullName>
        <description>How many clicks were received on a URL within an email</description>
        <label>Clicked Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Email_Template_ID__c</fullName>
        <description>Alphanumeric identifier assigned to a Salesloft email template</description>
        <label>Email Template ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Email_Template_Title__c</fullName>
        <description>Name given to a Salesloft email template</description>
        <label>Email Template Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SL_Replies_Count__c</fullName>
        <description>How many replies a Salesloft email has received</description>
        <label>Replies Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Step_Day__c</fullName>
        <description>The day in the Salesloft Cadence that a step has been set to be run</description>
        <label>Step Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Step_ID__c</fullName>
        <description>The alphanumeric identifier assigned to a step within a Salesloft cadence</description>
        <label>Step ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SL_Step_Name__c</fullName>
        <description>The name given to a step within a Salesloft cadence</description>
        <label>Step Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>